--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -18,7 +18,7 @@
                     <a href="#">My books</a>
                 </li>
                 <li {% if section == 'people' %}class="selected"{% endif %}>
-                    <a href="#">Groups</a>
+                    <a href="#">Clubs</a>
                 </li>
             </ul>
         {% endif %}
