--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+{% extends "base.html" %}    <link rel="import" href="localhost:8000/club/templates/club/list_view.html">
+
 
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
     <h1>Dashboard</h1>
     <p>Welcome to your dashboard</p>
-    <a href="{% url 'logout' %}">Log-out</a>
+
 {% endblock %}
