--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,17 +15,20 @@
                     <a href="{% url 'dashboard' %}">My dashboard</a>
                 </li>
                 <li {% if section == 'images' %}class="selected"{% endif %}>
-                    <a href="#">My books</a>
+                    <a href="{% url 'book:all_books_view' %}">My books</a>
                 </li>
                 <li {% if section == 'people' %}class="selected"{% endif %}>
                     <a href="{% url 'club:club_selection' %}">Clubs</a>
+                </li>
+                <li {% if section == 'profile' %}class="selected"{% endif %}>
+                    <a href="{% url 'edit' %}">My Profile</a>
                 </li>
             </ul>
         {% endif %}
 
         <span class="user">
             {% if request.user.is_authenticated %}
-                Hello {{ request.user.first_name }},
+                Hello {{ request.user }},
                 <a href="{% url 'logout' %}">Logout</a>
             {% else %}
                 <a href="{% url 'login' %}">Log-in</a>
@@ -36,5 +39,30 @@
         {% block content %}
         {% endblock %}
     </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+<script>
+    var csrftoken = Cookies.get('csrftoken');
+    function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+    }
+    });
+     $(document).ready(function(){
+        console.log("Hello world");
+        {% block domready %}
+
+        {% endblock %}
+    });
+</script>
 </body>
+
 </html>
