--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -7,4 +7,7 @@
     <h1>Dashboard</h1>
     <p>Welcome to your dashboard</p>
 
+    <iframe src="{% url 'book:list_view' %}" style="border: none;" width="1920" height="600"></iframe>
+    <iframe src="{% url 'club:list_view' %}" style="border: none;" width="1920" height="600"></iframe>
+
 {% endblock %}
