--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-
+{% block css %}{% endblock %}
 </head>
 <body>
     <div id="header">
@@ -42,6 +42,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.js"></script>
+
 <script>
     var csrftoken = Cookies.get('csrftoken');
     function csrfSafeMethod(method) {
@@ -60,6 +62,7 @@
       {% endblock %}
        });
   </script>
+{% block javascript %}{% endblock %}
 </body>
 </html>
 
