--- a/account/templates/base_slim.html
+++ b/account/templates/base_slim.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <base target="_parent"> <!-- Open links in iframe window in the parent window !-->
 {% block css %}{% endblock %}
 </head>
 <body>
