--- a/club/templates/club/discussion_club_detail.html
+++ b/club/templates/club/discussion_club_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}{{ club.group_name }}{% endblock %}
 
@@ -18,22 +19,37 @@
     <a href="{{ club.current_book.get_absolute_url }}" alt="current_book_cover">
         <img src="{{ im.url }}" class="image-detail">
     </a>
+    <br />
     {% endthumbnail %}
+    {{ club.is_admin }}
+     {% if club.is_admin %}
+        <!-- Option to change the group settings -->
+        <p><a href="{% url 'club:edit_discussion' id=club.id %}">Edit</a> group with id {{ club.id }}</p>
+
+        {% endif %}
 
     <div class="likes">
         <span class="count">
-            <span class="total">{{ like_balance }}</span>
+            <span class="total likes">{{ like_balance }}</span>
             like{{ like_balance|pluralize }}
         </span>
         <a href="#" data-id="{{ book.id }}" data-action="{% if user_liked_book %}un{% endif %}like"
-           class="like button">
+           class="like toggle button" data-group_type="discussion">
             {% if not user_liked_book %}
                 Like
             {% else %}
                 Unlike
             {% endif %}
         </a>
+        <br />
     </div>
+    <div class="member-count">
+        <span class="count-members">{{ club.member_count }}</span> Member{{ club.member_count|pluralize }}
+        <a href="#" data-id="{{ club.id }}" data-group_type="discussion" data-action="{% if club.is_member %}leave{% else %}join{% endif %}"
+            class="join-toggle button">{% if club.is_member %}Leave{% else %}Join{% endif %}</a>
+    </div>
+
+
 
     <div class="card-body">
         {% if  new_comment %}
@@ -58,36 +74,14 @@
 
         </div>
     {% endfor %}
+
+<!-- Load needed JavaScript variable-->
+<script>var toggle_view_url = "{% url 'club:toggle' %}"</script>
+<script>var like_toggle_url = "{% url 'book:like' %}"</script>
+
 {% endblock %}
 
-{% block domready %}
-   $('a.like').click(function(e){
-    e.preventDefault();
-
-    $.post('{% url "book:like" %}',
-        {
-            id: $(this).data('id'),
-            action: $(this).data('action')
-        },
-        function(data){
-        if (data['status'] == 'ok')
-            {
-                var previous_action = $('a.like').data('action');
-
-                // toggle data-action
-                $('a.like').data('action', previous_action == 'like' ?
-                'unlike': 'like');
-                // toggle link text
-                $('a.like').text(previous_action == 'like' ? 'Unlike':
-                'Like');
-
-                // update total_likes
-                var previous_likes = parseInt($('span.count .total').text());
-
-                $('span.count .total').text(previous_action == 'like' ?
-                previous_likes + 1 : previous_likes - 1);
-            }
-        }
-        );
-    });
+{%  block javascript %}
+<script src="{% static 'club/toggle_member.js' %}"></script>
+<script src="{% static 'book/toggle_like.js' %}"></script>
 {% endblock %}
