--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -12,16 +12,16 @@
         {% if request.user.is_authenticated %}
             <ul class="menu">
                 <li {% if section == 'dashboard' %}class="selected"{% endif %}>
-                    <a href="{% url 'dashboard' %}">My dashboard</a>
+                    <a href="{% url 'account:dashboard' %}">My dashboard</a>
                 </li>
                 <li {% if section == 'images' %}class="selected"{% endif %}>
                     <a href="{% url 'book:all_books_view' %}">My books</a>
                 </li>
                 <li {% if section == 'people' %}class="selected"{% endif %}>
-                    <a href="{% url 'club:club_selection' %}">Clubs</a>
+                    <a href="{% url 'club:club_selection' %}">My Clubs</a>
                 </li>
                 <li {% if section == 'profile' %}class="selected"{% endif %}>
-                    <a href="{% url 'edit' %}">My Profile</a>
+                    <a href="{% url 'account:edit' %}">My Profile</a>
                 </li>
             </ul>
         {% endif %}
@@ -29,9 +29,9 @@
         <span class="user">
             {% if request.user.is_authenticated %}
                 Hello {{ request.user }},
-                <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'account:logout' %}">Logout</a>
             {% else %}
-                <a href="{% url 'login' %}">Log-in</a>
+                <a href="{% url 'account:login' %}">Log-in</a>
             {% endif %}
         </span>
     </div>
