--- a/book/templates/book/list_view.html
+++ b/book/templates/book/list_view.html
@@ -18,7 +18,7 @@
 {% block content %}
 
 <label for="search">New Book: </label>
-        <input type="text" placeholder="Book" id="search" />
+        <input type="text" placeholder="Book" id="search" value="Das Lied von Eis und Feuer 0" />
         <button type="button" id="button">Search</button>
         <br />
 
@@ -77,6 +77,7 @@
     var books = {{  book_data | js }};
     // first, set the drop down value based on the users library
     (function (){
+
         changedStatusBooks = {};
         var counter = {{ books.count }}
         for(i=0; i < counter; i++) {
